debug_output_5.txt
  File "/Users/anggar/Code/song-shake/debug_deep.py", line 46
    except Exception as e:
    ^^^^^^
SyntaxError: invalid syntax
